# continual-rl-experiments

./: .gitignore  README.md  pyproject.toml
experiments/: s4_code.py
experiments/scripts/: run_experiment.py
notebooks/: analysis.ipynb
src/continual_rl/agents/: base.py
src/continual_rl/config/: default_config.yaml
